HBase: simple store/fetch/load ops